fix: correct color contrast on light mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,9 @@
 body {
 	background-color: black;
 }
+
+@media print {
+	body {
+		background-color: white;
+	}
+}
